--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@
 numpy==1.23.4
 pandas==1.5.1
 spacy==3.4.2
-textacy==0.12.0fastapi==0.85.1
+textacy==0.12.0
+fastapi==0.85.1
 uvicorn==0.19.0
 numpy==1.23.4
 pandas==1.5.1
