--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,8 @@ pandas==1.5.1
 spacy==3.4.2
 textacy==0.12.0
 sentence-transformers
-
-torch
-torchvision
-torchaudio
+torch==1.12.1+cpu
+torchvision==0.13.1+cpu
+torchaudio==0.12.1+cpu
 fastapi==0.85.1
 uvicorn==0.19.0
